tests/error_condition_fail1.cpp
#include "../stdex/include/core.h"
#include "../stdex/include/system_error.hpp"
#include "../stdex/include/string.hpp"

#include <iostream>

#define VERIFY(cond) STATIC_ASSERT((cond), check)
#define DYNAMIC_VERIFY(cond) if(!(cond)) {std::cout << "check condition \'" << #cond << "\' failed at line " << __LINE__ << std::endl; return -1;}
#define RUN_TEST(test) {std::cout << #test << std::endl; int line = test(); if(line != 0) {std::cout << "failed at line " << line << std::endl; return line;}}

int test1()
{
  stdex::error_condition e;
  int i = e; // { dg-error "cannot convert" }

  return i;
}

int main(void)
{
    using namespace stdex;

    RUN_TEST(test1);

    return 0;
}